# rv_emulator

./: .clang-format  .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: bit_utils.h  core.h  decoding.h  memory.h  registers.h
src/: core.cpp  decoding.cpp  decoding.h  main.cpp  memory.cpp  registers.cpp  registers.h
tests/: decoder_test.cpp  format_test.cpp  memory_test.cpp  registers_test.cpp  test_instructions.h
